--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": " nodemon index.js",
+    "start": " env-cmd -f .env nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +13,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
+    "env": "^0.0.2",
+    "env-cmd": "^10.1.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
